# advent

./: .pre-commit-config.yaml  Justfile  pyproject.toml
advent/: common.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  utils.py
advent/data/: day13.txt
advent/day01/: __init__.py  part1.py  part2.py
advent/day02/: part1.py  part2.py
advent/day03/: part1.py  part2.py
advent/day04/: part1.py  part2.py
advent/day05/: part1.py  part2.py
advent/day06/: part1.py  part2.py
