[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@robivision.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
